--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "type": "module",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "dev": "nodemon src/server.js"
+  },
   "keywords": [],
   "author": "Pablo Lima de Oliveira",
   "license": "ISC",
@@ -12,7 +14,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "joi": "^17.13.1",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.2"
   },
